Fix maven jacoco plugin